[headless] Use version for product name and user agent.

Also sets the product name on DevTools server.

BUG=696457

Review-Url: https://codereview.chromium.org/2720673003
Cr-Commit-Position: refs/heads/master@{#453189}

Former-commit-id: 38ff88e55d8c151e1559da02fa1c52aff31c44eb