headless/lib/browser/headless_browser_context_options.h
@@ -26,6 +26,7 @@ class HeadlessBrowserContextOptions {
   HeadlessBrowserContextOptions& operator=(
       HeadlessBrowserContextOptions&& options);
 
+  const std::string& product_name_and_version() const;
   const std::string& user_agent() const;
 
   // See HeadlessBrowser::Options::proxy_server.
@@ -60,6 +61,7 @@ class HeadlessBrowserContextOptions {
 
   HeadlessBrowser::Options* browser_options_;
 
+  base::Optional<std::string> product_name_and_version_;
   base::Optional<std::string> user_agent_;
   base::Optional<net::HostPortPair> proxy_server_;
   base::Optional<std::string> host_resolver_rules_;
