headless/lib/headless_content_client.h
@@ -16,6 +16,7 @@ class HeadlessContentClient : public content::ContentClient {
   ~HeadlessContentClient() override;
 
   // content::ContentClient implementation:
+  std::string GetProduct() const override;
   std::string GetUserAgent() const override;
   base::string16 GetLocalizedString(int message_id) const override;
   base::StringPiece GetDataResource(
